chore: 🤖 update dependencies, cleanup

--- a/styles/_app.css
+++ b/styles/_app.css
@@ -53,6 +53,27 @@ a {
   font-size: 1.5rem;
 }
 
+.social a {
+  display: block;
+  padding: 1.1rem;
+  margin: 3.5rem 1.75rem 0;
+  border-radius: 20px;
+  box-shadow: 5px 5px 10px #151515, -5px -5px 10px #272727;
+  transition: opacity 0.2s ease-in-out;
+  opacity: 0.5;
+}
+
+.social a:hover,
+.social a:focus {
+  opacity: 1;
+}
+
+.social a img {
+  width: 2.4rem;
+  filter: invert(90%);
+}
+
+
 @media (max-width: 600px) {
   .grid {
     width: 100%;
